--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-matplotlib==3.8.4
-pandas==2.2.2
-Pillow==10.3.0
-Requests==2.31.0
+matplotlib>=3.8.4
+pandas>=2.2.2
+Pillow>=10.3.0
+Requests>=2.31.0
